fixes research spacing 3

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -250,6 +250,6 @@ p.research-date {
     font-weight: normal;
 }
 
-.paper {
-    max-width: 20%;
+.item {
+    max-width: 15%;
 }
